# dolibarr_bank_account_injector

./: README.md  dolibarr_injector.py  pyproject.toml
